--- a/style.css
+++ b/style.css
@@ -140,11 +140,11 @@ body {
 
 /* Project Icons */
 .project-icon {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     margin-right: 10px;
     display: inline-block;
-    vertical-align: middle;
+    margin-left: 10px;
 }
 
 .project-icon img {
