--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
     width: 60px;
     height: 60px;
     display: inline-block;
-    margin-left: 10px;
+    margin-righ: 10px;
 }
 
 .project-icon img {
